# slide-generator

./: .gitignore  CLAUDE.md  README.md
deep_research_slides/: QUICKSTART.md  README.md
deep_research_slides/backend/: .env.example  .gitignore  HF_TOKEN_PERMISSIONS.md  pyproject.toml  requirements.txt  run.py  test_api.py  test_api_simple.py  test_setup.py  test_websocket.html  test_websocket.py
deep_research_slides/backend/app/: __init__.py  main.py  research_agent.py  slide_generator.py
deep_research_slides/frontend/: index.html  package-lock.json  package.json
deep_research_slides/frontend/src/: App.tsx
html_to_pptx/: README.md  __init__.py  __main__.py  cli.py
html_to_pptx/builders/: __init__.py  pptx_builder.py
html_to_pptx/core/: __init__.py  converter.py
html_to_pptx/parsers/: __init__.py  html_parser.py
html_to_pptx/utils/: __init__.py  xml_templates.py
patterns/: slide_patterns.html
pjt/UiPath/knowledge/: UiPath_Insight.md
pjt/UiPath/slides/: uipath_insights_2024.html  (+3 more)
pjt/deep_research_to_slides/: architecture_slides.html
pjt/gemini_claude_comparison/: README.md  figma_import_guide.md  figma_slide_structure.json
pjt/snowflake_research/: README.md
pjt/softbank_ai_agents/: README.md
reference/: sample.html  sample_blue.html  sample_green.html
utils/: html_slides_split_and_convert.py  html_slides_splitter.py  html_slides_to_pdf.py  html_slides_to_pdf_html2image.py  html_slides_to_pdf_playwright.py  html_slides_to_pdf_selenium.py  html_slides_to_pdf_v2.py  html_slides_to_pdf_weasyprint.py  html_to_pdf_converter.py
(+111 files in other folders)
